feat: create collpase section accounts social media

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -849,6 +849,10 @@
       "title": "Connect Your Social Networks",
       "description": "Connect your social media accounts to allow automatic content publishing. Your information will be kept secure and will only be used for the functions you authorize.",
       "whyConnect": "Why connect your social networks?",
+      "of": "of",
+      "accounts": "accounts",
+      "seeAccounts": "See networks",
+      "hide": "Hide",
       "benefits": {
         "autoPublish": "Automatically publish content",
         "manageAll": "Manage all accounts in one place",
