--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -196,7 +196,9 @@
           "description": "Description",
           "hashtags": "#marketing #publicidad #comunicación",
           "schedulePublication": "Schedule Publication",
-          "goal": "Goal"
+          "goal": "Goal",
+          "startDate": "12/12/2025",
+          "endDate": "12/12/2026"
         
         },
         "button":{
@@ -238,7 +240,9 @@
           "description": "Description",
           "hashtags": "Hashtags",
           "schedulePublication": "Schedule Publication",
-          "goal": "Goal"
+          "goal": "Goal",
+          "startDate": "12/12/2025",
+          "endDate": "12/12/2026"
         },
         "button":{
           "save":"Update",
@@ -272,7 +276,12 @@
       "validation":{
         "descRequired":"Description is required",
         "nameRequired":"Name is required",
+        "descMin":"Description must be at least 10 characters long",
+        "descMax":"Description cannot exceed 200 characters",
+        "objMin":"Objective must be at least 5 characters long",
         "goalRequired":"Goal is required",
+        "titleRequired":"Title is required",
+        "titleLength":"Title must be at least 70 characters long",
         "statusRequired":"Status is required",
         "budgetRequired":"Budget is required",
         "startDateRequired":"Start Date is required",
@@ -280,11 +289,8 @@
         "publishDateRequired":"Publish Date is required",
         "publishedOnRequired":"Published On is required",
         "associatedPublicationsRequired":"Associated Publications is required",
-        "titleRequired":"Title is required",
-        "descriptionRequired":"Description is required",
         "hashtagsRequired":"Hashtags is required",
         "schedulePublicationRequired":"Schedule Publication is required",
-        "titleLength":"Title must be at least 10 characters long",
         "descriptionLength":"Description must be at least 10 characters long",
         "hashtagsLength":"Hashtags must be at least 10 characters long",
         "schedulePublicationLength":"Schedule Publication must be at least 10 characters long"
@@ -368,7 +374,16 @@
         "publishDate": "Publish Date",
         "publishedOn": "Published On",
         "publications": "Publications",
-         "associatedPublicationsRequired":"Associated Publications is required"
+         "associatedPublicationsRequired":"Associated Publications is required",
+         "placeholders":
+         {
+          "budget": "0.00",
+          "goal": "e.g.Increment brand awareness",
+          "description": "e.g. Describe the campaign!",
+          "name": "e.g. Summer Sale 2026",
+          "startDate": "12/12/2025",
+          "endDate": "12/12/2026"
+         }
       },
       "edit": {
         "title": "Edit Campaign",
@@ -388,7 +403,16 @@
         "endDate": "End Date",
         "publishDate": "Publish Date",
         "publishedOn": "Published On",
-        "associatedPublications": "Associated Publications"
+        "associatedPublications": "Associated Publications",
+        "placeholders":
+         {
+          "budget": "0.00",
+          "goal": "e.g.Increment brand awareness",
+          "description": "e.g. Describe the campaign!",
+          "name": "e.g. Summer Sale 2026",
+          "startDate": "12/12/2025",
+          "endDate": "12/12/2026"
+         }
       },
        "showCampaign": 
       {
@@ -940,7 +964,7 @@
         "titleLength": "Title cannot exceed 100 characters",
         "descRequired": "Description is required",
         "descMin": "Description must be at least 10 characters",
-        "descMax": "Description cannot exceed 500 characters",
+        "descMax": "Description cannot exceed 200 characters",
         "imageRequired": "Image is required",
         "imageSize": "Image must be smaller than 5MB",
         "imageType": "Only JPG, PNG, or WebP files are allowed",
