fix: settings and language text

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -619,7 +619,10 @@
       "status": "Status",
       "message": "Message",
       "error": "Error",
-      "video": "Video"
+      "video": "Video",
+      "copy": "Copy",
+      "less": "Less",
+      "more": "More"  
     },
     "status": {
       "success": "Success",
