feat: Implement comprehensive content management for publications and campaigns with social media scheduling and logging.

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -621,7 +621,7 @@
       "source": "Source",
       "campaign": "Campaign",
       "status": "Status",
-      "message": "Message",
+      "description": "Description",      "message": "Message",
       "error": "Error",
       "video": "Video",
       "copy": "Copy",
