fix: campaigns select publications modals

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -178,6 +178,7 @@
         "schedulePublication": "Schedule Publication",
         "goal": "Goal",
         "status": "Status",
+        "campaigns": "Campaigns",
         "budget": "Budget",
         "startDate": "Start Date",
         "endDate": "End Date",
@@ -222,6 +223,7 @@
         "campaignTitle": "Campaign Title",
         "name": "Name",
         "image": "Image",
+        "campaigns": "Campaigns",
         "goal": "Goal",
         "status": "Status",
         "budget": "Budget",
