--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -176,6 +176,7 @@
         "description": "Descripción",
         "image": "Imagen",
         "hashtags": "Hashtags",
+        "campaigns": "Campañas",
         "schedulePublication": "Programar Publicación",
         "goal": "Objetivo",
         "status": "Estado",
@@ -223,6 +224,7 @@
         "name": "Nombre",
         "image": "Imagen",
         "goal": "Objetivo",
+        "campaigns": "Campañas",
         "status": "Estado",
         "budget": "Presupuesto",
         "startDate": "Fecha de Inicio",
