change: process adjustments and flow of publications from updating the post from publish to the correct display of the status

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -266,6 +266,7 @@
         "loading":"Loading...",
         "publishing":"Publishing...",
         "platforms":"Platforms",
+        "failed":"Failed",
         "youtube":{
           "youtubeThumbnails":"YouTube Thumbnails"
         },
